--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.46.0",
+    "axios": "^1.2.1",
+    "faunadb": "^4.7.1",
     "next": "13.0.3",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
